# Yams

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Doxygen/html/: _c_dice_8cpp.html  _c_dice_8cpp__incl.map  _c_dice_8cpp__incl.md5  _c_dice_8cpp_source.html  _c_dice_8hpp.html  _c_dice_8hpp__dep__incl.map  _c_dice_8hpp__dep__incl.md5  _c_dice_8hpp__incl.map  _c_dice_8hpp_source.html  _c_dice_set_8hpp.html  _c_dice_set_8hpp__dep__incl.map  _c_dice_set_8hpp__dep__incl.md5  _c_dice_set_8hpp_source.html  _q_about_widget_8cpp.html  _q_about_widget_8cpp__incl.map  _q_about_widget_8cpp__incl.md5  _q_about_widget_8cpp_source.html  _q_about_widget_8hpp.html  _q_about_widget_8hpp__dep__incl.map  _q_about_widget_8hpp__dep__incl.md5  _q_about_widget_8hpp__incl.map  _q_about_widget_8hpp__incl.md5  _q_about_widget_8hpp_source.html  _q_camera_widget_8cpp.html  _q_camera_widget_8cpp__incl.map  _q_camera_widget_8cpp_source.html  _q_camera_widget_8hpp.html  _q_camera_widget_8hpp__dep__incl.map  _q_camera_widget_8hpp__incl.map  _q_camera_widget_8hpp__incl.md5  _q_camera_widget_8hpp_source.html  _q_end_game_widget_8cpp.html  _q_end_game_widget_8cpp__incl.map  _q_end_game_widget_8cpp__incl.md5  _q_end_game_widget_8cpp_source.html  _q_end_game_widget_8hpp.html  _q_end_game_widget_8hpp__dep__incl.map  _q_end_game_widget_8hpp__dep__incl.md5  _q_end_game_widget_8hpp__incl.map  _q_end_game_widget_8hpp_source.html  (+304 more)
Doxygen/latex/: _c_dice_8cpp.tex  _c_dice_8hpp.tex  _c_dice_8hpp__dep__incl.md5  _c_dice_8hpp__incl.md5  _c_dice_set_8hpp.tex  _c_dice_set_8hpp__dep__incl.md5  _q_about_widget_8cpp.tex  _q_about_widget_8hpp.tex  _q_about_widget_8hpp__dep__incl.md5  _q_camera_widget_8hpp.tex  _q_end_game_widget_8cpp.tex  _q_end_game_widget_8cpp__incl.md5  _q_end_game_widget_8hpp.tex  _q_end_game_widget_8hpp__incl.md5  _q_player_grid_8cpp.tex  _q_player_grid_8cpp__incl.md5  _q_player_grid_8hpp.tex  _q_player_grid_8hpp__incl.md5  _q_player_grids_widget_8cpp__incl.md5  _q_player_grids_widget_8hpp.tex  _q_player_grids_widget_8hpp__dep__incl.md5  _q_player_grids_widget_8hpp__incl.md5  _q_yams_8cpp.tex  _q_yams_8cpp__incl.md5  _q_yams_8hpp.tex  _q_yams_8hpp__dep__incl.md5  _q_yams_8hpp__incl.md5  _q_yams_start_form_widget_8cpp.tex  _q_yams_start_form_widget_8cpp__incl.md5  class_c_dice.tex  class_c_dice_set.tex  class_c_dice_set_a30c0ad7da71fbb8ff4d18657a02106a6_icgraph.md5  class_c_dice_set_a41283946125d622bc9aafd1dcce8a3ae_icgraph.md5  class_c_dice_set_a556ee7b5baaab3977515e7cdae27868d_icgraph.md5  class_c_dice_set_a6b8f92048573d284aa45475380f52513_cgraph.md5  class_c_dice_set_a8c8948e7c2a1412baa530998c8e700c0_icgraph.md5  class_c_dice_set_aa59fa9a67db3744c472f05ec43af0b0c_icgraph.md5  class_c_dice_set_aa98b9ca8fb34bc3a8e92c92cb29199f7_cgraph.md5  class_c_dice_set_ad7f620dba39eba180981c0c0df6ae41b_icgraph.md5  class_q_about_widget.tex  (+75 more)
Logo/: Logo.afdesign
doxygen/html/: _c_dice_8cpp.html  _c_dice_8cpp__incl.map  _c_dice_8cpp_source.html  _c_dice_8hpp.html  _c_dice_8hpp__dep__incl.map  _c_dice_8hpp__incl.map  _c_dice_8hpp__incl.md5  _c_dice_8hpp_source.html  _c_dice_set_8hpp.html  _c_dice_set_8hpp__dep__incl.map  _c_dice_set_8hpp_source.html  _q_about_widget_8cpp.html  _q_about_widget_8cpp_source.html  _q_about_widget_8hpp.html  _q_about_widget_8hpp_source.html  _q_camera_widget_8cpp.html  _q_camera_widget_8cpp__incl.map  _q_camera_widget_8cpp__incl.md5  _q_camera_widget_8cpp_source.html  _q_camera_widget_8hpp.html  _q_camera_widget_8hpp__dep__incl.map  _q_camera_widget_8hpp__dep__incl.md5  _q_camera_widget_8hpp_source.html  _q_end_game_widget_8cpp.html  _q_end_game_widget_8cpp__incl.map  _q_end_game_widget_8cpp_source.html  _q_end_game_widget_8hpp.html  _q_end_game_widget_8hpp__incl.map  _q_end_game_widget_8hpp__incl.md5  _q_end_game_widget_8hpp_source.html  _q_player_grid_8cpp.html  _q_player_grid_8cpp__incl.map  _q_player_grid_8cpp__incl.md5  _q_player_grid_8cpp_source.html  _q_player_grid_8hpp.html  _q_player_grid_8hpp__dep__incl.md5  _q_player_grid_8hpp__incl.map  _q_player_grid_8hpp_source.html  _q_player_grids_widget_8cpp.html  _q_player_grids_widget_8cpp__incl.md5  (+206 more)
doxygen/latex/: _c_dice_8cpp.tex  _c_dice_8cpp__incl.md5  _c_dice_8hpp.tex  _c_dice_set_8hpp.tex  _q_about_widget_8cpp__incl.md5  _q_about_widget_8hpp.tex  _q_about_widget_8hpp__incl.md5  _q_camera_widget_8cpp.tex  _q_camera_widget_8cpp__incl.md5  _q_camera_widget_8hpp.tex  _q_camera_widget_8hpp__dep__incl.md5  _q_camera_widget_8hpp__incl.md5  _q_end_game_widget_8hpp__dep__incl.md5  _q_player_grid_8cpp.tex  _q_player_grid_8cpp__incl.md5  _q_player_grid_8hpp.tex  _q_player_grid_8hpp__dep__incl.md5  _q_player_grid_8hpp__incl.md5  _q_player_grids_widget_8cpp.tex  _q_player_grids_widget_8cpp__incl.md5  _q_player_grids_widget_8hpp__incl.md5  _q_yams_8cpp__incl.md5  _q_yams_8hpp.tex  _q_yams_8hpp__incl.md5  _q_yams_start_form_widget_8hpp.tex  _q_yams_start_form_widget_8hpp__dep__incl.md5  _q_yams_start_form_widget_8hpp__incl.md5  annotated.tex  class_c_dice_set.tex  class_c_dice_set_a497cabeea2ea139e834f75925151f551_icgraph.md5  class_c_dice_set_aa98b9ca8fb34bc3a8e92c92cb29199f7_icgraph.md5  class_q_about_widget.tex  class_q_about_widget__coll__graph.md5  class_q_about_widget_a932be04e7f3d68a1ea754c8e9dc61732_icgraph.md5  class_q_camera_widget.tex  class_q_camera_widget__inherit__graph.md5  class_q_camera_widget_a0337353c26fa1a28663876c61763d427_icgraph.md5  class_q_camera_widget_a12889f7987b9115a664b8713bf3433ad_icgraph.md5  class_q_camera_widget_a6a39f95827c246c73bbfeda324bdb3dd_icgraph.md5  (+56 more)
installer_src/config/: config.xml
src/: QAboutWidget.cpp  QAboutWidget.hpp  QAboutWidget.qrc  QAboutWidget.ui  QEndGameWidget.cpp  QEndGameWidget.hpp  QEndGameWidget.ui  QPlayerGridWidget.cpp  QPlayerGridWidget.hpp  QPlayerGridWidget.ui  QPlayerGridsWidget.cpp  QPlayerGridsWidget.hpp  QPlayerGridsWidget.ui  QYams.cpp  QYams.hpp  QYams.qrc  QYams.ui  QYamsStartFormWidget.cpp  QYamsStartFormWidget.hpp  QYamsStartFormWidget.ui  QYamsStartPlayerNameInputWidget.cpp  QYamsStartPlayerNameInputWidget.hpp  QYamsStartPlayerNameInputWidget.ui  main.cpp
(+82 files in other folders)
